# Ci_Gui

./: gitignore  post_temp_cut.md  新建文本文档.md
Main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Post/: CMakeLists.txt  ColorBarDialog.cpp  ColorBarDialog.h  ColorBarDialog.ui  ControlPanel.cpp  ControlPanel.h  ControlPanel.ui  ControlPanel.ui~  CutplaneDialog.cpp  CutplaneDialog.cpp~  CutplaneDialog.h  CutplaneDialog.h~  CutplaneDialog.ui  MainWindow copy.ui  MainWindow.cpp  MainWindow.cpp~  MainWindow.h  MainWindow.ui  MainWindow_temp.ui  Post.pro  PostMain.cpp  PostMainWindow.cpp  PostMainWindow.h  PostMainWindow.ui  color_mapping_documentation.md  main.cpp  sources.cmake  ui_ControlPanel.h  ui_CutplaneDialog.h  ui_MainWindow.h  vtkAesReader.cpp  vtkDisplayWindow.cpp  vtkDisplayWindow.h  vtkDisplayWindow.h~
Pre/: BCExtra.cpp  BCExtra.h  BCExtra.ui  BoundaryMerger.cpp  BoundaryMerger.h  BoundaryMerger.ui  CMakeLists.txt  CustomChartView.cpp  CustomChartView.h  DataStructure.cpp  DataStructure.h  MergerCore.cpp  MergerCore.h  MonitorPlot.cpp  MonitorPlot.h  Perform_Plot.cpp  Perform_Plot.h  PerformanceCurve.cpp  PerformanceCurve.h  Pre2.pro  PreMainWindow.cpp  PreMainWindow.h  PreMainWindow.ui  PreMainWindow_back.ui  PreMainWindow_bak.ui  PreMainWindow_bak1218.ui  PreMainWindow_bak3.ui  PreMainWindowbak2.ui  PreMainWindowbbbb.ui  PreProcessSettings.cpp  PreProcessSettings.h  Residual_Plot.cpp  Residual_Plot.h  SelectFile.cpp  SelectFile.h  SelectFile.ui  UtilitiesGUIPre.cpp  UtilitiesGUIPre.h  loadprofile.cpp  loadprofile.h  (+12 more)
